# LABS

1/: CMakeLists.txt  binary_to_hex.h  main.cpp  readme.md  replace_letters.cpp  replace_letters.h  tests.cpp
2/: bitstring.cpp  bitstring.h  tests.cpp
3/: CMakeLists.txt
3/include/: figure.h  rectangle.h  square.h  trapezoid.h
3/src/: main.cpp  rectangle.cpp  square.cpp  trapezoid.cpp
3/tests/: tests.cpp
4/: CMakeLists.txt
4/include/: array.h  figure.h  hexagon.h  octagon.h  pentagon.h  point.h
4/src/: main.cpp
4/tests/: tests.cpp
